--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,28 +1,66 @@
 @media only screen and (max-width: 740px){
 	#wrapper{
-		background: blue;
-	}
-	header{height: 324px;}
+/*		background: cyan;
+*/	}
+	header{height: 260px;}
+	h1{font-size: 25px;}
+	img{width: 130px;height: 130px;box-shadow: 0 2px 4px rgba(0, 0, 0, 0);}
+	h2{
+	text-align: center;
+   	font-size: 20px;
+   }
+   h1,h2,h3{
+   	text-align: center
+   }
+   .info{
+   	font-size: 13px;
+   }
+   section{
+   	font-size: 15px;
+   }
+   footer{
+   	font-size: 14px;
+   	text-align: center
+   }
+	
 }
-
-
-
 
 
 
 @media only screen and (max-width: 570px){
 	#wrapper{
 	width: 100%;
-	background: pink;
+	/*background: pink;*/
 	}
    header{
-	height: 310px;
+	height: 230px;
    }
 
    img{
    	 width: 100px;
 	 height: 100px;
 	 box-shadow: 0 2px 4px rgba(0, 0, 0, 0);
+   }
+   h1{
+   	 font-size: 25px;
+   	 text-align: center;
+   }
+   h2{
+   	font-size: 16px;
+   	text-align: center;
+   }
+   .info{
+   	font-size: 12px;
+   }
+   section{
+   	font-size: 12px;
+   }
+   h3{
+   	text-align: center;
+   }
+   footer{
+   	font-size: 16px;
+   	text-align: center
    }
 }
 
@@ -33,38 +71,48 @@
 @media only screen and (max-width:480px){
 #wrapper{
 	width: auto;
-	background: cyan;
+	/*background: cyan;*/
 	}
 header{
 	width: auto;
-	height: 464px; 
+	height: 230px; 
 }
 img{
 	 box-shadow: 0 2px 4px rgba(0, 0, 0, 0);
-	 text-align: center;
 }
 .infoimage{
 	text-align: center;
     display: block;
 }
 .info{
-font-size: 15px;
+font-size: 10px;
 text-align: center;
+width: 50%;
 }
 .photo{
-margin-right:33%;
+/*margin-right:33%;
 margin-top: 10px;
 margin-left: 33%;
-align-content: none;
+align-content: none;*/
+width: 30%;
 }
-h2{
+h1{
+	text-align: center;
 	font-size: 20px;
 }
-
+h2{
+	text-align: center;
+	font-size: 15px;
+}
+h3{
+	text-align: center;
+}
 section{
      width: auto;
+     font-size: 10px;
 }
 footer{
+	font-size: 15px;
 	text-align: center;
 	padding: auto;
 	margin: auto;
